--- a/server/views/components/filter/template.njk
+++ b/server/views/components/filter/template.njk
@@ -3,6 +3,10 @@
 <section class="pac-filter-card govuk-!-margin-bottom-6" data-test="pac-filter-card">
     <form name="pac-filter-form" id="pac-filter-form" method="post">
 
+        {% for hidden in params.hiddenInputs %}
+            <input type="hidden" id="hidden-{{ hidden.id }}" name="{{ hidden.id }}" value="{{ hidden.value }}" />
+        {% endfor %}
+
         <h2 class="govuk-heading-s">Filters</h2>
 
         {% for filter in params.filters %}
