💬 PIC-3061: Update error page text

--- a/server/views/error.njk
+++ b/server/views/error.njk
@@ -25,7 +25,8 @@
 
   {% if status === 500  %}
     <h1 class="govuk-heading-l">Sorry, there is a problem with the service</h1>
-    <p class="govuk-body">Please try again later.</p>
+    <p class="govuk-body">Try refreshing the page or going back and trying again.</p>
+    <p class="govuk-body"><a class="govuk-link" href="https://forms.gle/fNMLacYp8RpvKTG17" target="_blank">Use this form</a> to tell us about the problem.</p>
   {% endif %}
 
   {% if status === 503  %}
