Add missing heading

--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -179,6 +179,8 @@
 
       <p class="govuk-body">Comments will not be transferred to NDelius.</p>
 
+      <h3 class="govuk-heading-s" id="ug-risk-register">How to add a comment</h3>
+
       <ul class="govuk-list govuk-list--bullet">
         <li>Choose a case from the case list</li>
         <li>Scroll down to the bottom of the case</li>
