--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -179,7 +179,7 @@
 
       <p class="govuk-body">Comments will not be transferred to NDelius.</p>
 
-      <h3 class="govuk-heading-s" id="ug-risk-register">How to add a comment</h3>
+      <h3 class="govuk-heading-s" id="ug-how-to-add-comment">How to add a comment</h3>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>Choose a case from the case list</li>
