--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -112,7 +112,7 @@
 
       <p class="govuk-body">You can search for a defendant using either their full name or CRN. </p>
 
-      <p class="govuk-body">You should only user upper case letters in CRN searches. The search will not return any results if you search with a lowercase letter. For example A123456 will work but a123456 will not.</p>
+      <p class="govuk-body">You should only use upper case letters in CRN searches. The search will not return any results if you search with a lowercase letter. For example A123456 will work but a123456 will not.</p>
       
       <h3 class="govuk-heading-s" id="ug-applying-filters-to-a-case-list">Applying filters to a case list</h3>
       <p class="govuk-body">You can filter a case list by probation status, courtroom and session. You can apply
