💬 PIC-3201: Update user-guide.njk (#782)
* Update user-guide.njk

* Add missing heading

* Fix Tests

* Fix: typo

--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -108,6 +108,12 @@
 
       <p class="govuk-body">If a defendant has a 'Possible NDelius record', you need to review the details of any possible records and confirm their probation status.</p>
 
+      <h3 class="govuk-heading-s" id="ug-searching-for-someone">Searching for someone</h3>
+
+      <p class="govuk-body">You can search for a defendant using either their full name or CRN. </p>
+
+      <p class="govuk-body">You should only use upper case letters in CRN searches. The search will not return any results if you search with a lowercase letter. For example A123456 will work but a123456 will not.</p>
+      
       <h3 class="govuk-heading-s" id="ug-applying-filters-to-a-case-list">Applying filters to a case list</h3>
       <p class="govuk-body">You can filter a case list by probation status, courtroom and session. You can apply
         multiple filters to a case list.</p>
@@ -134,6 +140,7 @@
         <li>the offence and a brief summary</li>
         <li>the defendant's personal details - name, gender, date of birth, address and nationality</li>
         <li>the timeline of the case’s hearings and when the next hearing is scheduled for</li>
+        <li>Comments about a defendant</li>
       </ul>
 
       <p class="govuk-body">If a defendant has no probation record, you will only see the case summary information.</p>
@@ -151,12 +158,41 @@
       </ul>
 
       <h3 class="govuk-heading-s" id="ug-risk-register">Risk register</h3>
+
       <p class="govuk-body">If the defendant has a probation record, the risk register shows:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>active risks - type of risk, when it was registered and next review date</li>
         <li>inactive risks - type of risk, when it was registered and expired</li>
       </ul>
+
+      <h2 class="govuk-heading-m" id="ug-adding-comments">Adding comments to a case</h2>
+
+      <p class="govuk-body">You can add comments to a case, for example:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>any relevant one-to-one contacts with the defendant (must also be recorded in NDelius)</li>
+        <li>contacts with their solicitor or other stakeholders (must also be recorded in NDelius)</li>
+        <li>details of the post-sentence interview and the reporting instructions that were given (must also be recorded in NDelius)</li>
+        <li>details of the PSR interview and the instructions that were given.</li>
+      </ul>
+
+      <p class="govuk-body">Comments will not be transferred to NDelius.</p>
+
+      <h3 class="govuk-heading-s" id="ug-how-to-add-comment">How to add a comment</h3>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Choose a case from the case list</li>
+        <li>Scroll down to the bottom of the case</li>
+        <li>Type or paste your comments into the text box</li>
+        <li>Select Save</li>
+      </ul>
+
+      <p class="govuk-body">Your name and the time and date will be added to the note or comment.</p>
+
+      <p class="govuk-body">You can add as many comments as you like to a case.</p>
+
+      <p class="govuk-body">Adding comments to Prepare a case does not replace NDelius you should use professional judgement when recording information and consider whether it should be duplicated in NDelius. If a case is current then comments should be flagged to the Probation Practitioner in an NDelius case note.</p>
 
       <h2 class="govuk-heading-m" id="ug-viewing-an-order">Viewing an order</h2>
 
