--- a/server/views/whats-new.njk
+++ b/server/views/whats-new.njk
@@ -20,7 +20,29 @@
             <h1 class="govuk-heading-l">What's new</h1>
             <p class="govuk-body">The latest updates and improvements to Prepare a case for sentence.</p>
 
-            <h1 class="govuk-heading-m">7 February 2023</h1>
+            <h2 class="govuk-heading-m">27 July 2023</h2>
+
+            <h2 class="govuk-heading-s">Search for a defendant</h2>
+
+            <p class="govuk-body">You can search for a defendant using their name or CRN.</p>
+
+            <p class="govuk-body">At the moment you can only include an uppercase letter in a CRN search, it will not return any results if you search with a lowercase letter. For example A123456 will work but a123456 will not.</p>
+
+            <h2 class="govuk-heading-s">Add comments to a case</h2>
+
+            <p class="govuk-body">When a defendant is appearing in court, you can now type comments about the hearing straight into Prepare a case for sentence.</p>
+
+            <p class="govuk-body">This means that if a defendant returns to court for another hearing, whoever is doing court duty that day will be able to see information about them without leaving Prepare a case for sentence.</p>
+
+            <p class="govuk-body">The comments will stay on the case unless you delete them.</p>
+
+            <p class="govuk-body">Any comments you add will <strong>not be transferred to NDelius</strong> or any other system. You should use professional judgement when recording information in Prepare a case and consider whether this should be duplicated in NDelius. </p>
+
+            <p class="govuk-body">If someone is current then you must create an NDelius case note to alert the Probation Practitioner, it is not enough to just add a comment to Prepare a case.</p>
+
+            <p class="govuk-body">Use of this new feature is optional. You can discuss as a team whether you feel it will have any benefits for your court's ways of working.</p>
+
+            <h2 class="govuk-heading-m">7 February 2023</h2>
 
             <h2 class="govuk-heading-s">View cases in the past and see a case history</h2>
 
@@ -37,7 +59,7 @@
 
             <p class="govuk-body">If you see any problems with the new features, post them in the <a class="govuk-link" href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fchannel%2F19%3A8f91039f983642a3a704091dd1eb5b3f%40thread.tacv2%2FFeedback%2520and%2520queries%3FgroupId%3D11fe98ab-bd31-44aa-ab95-8ab68808964a%26tenantId%3Dc6874728-71e6-41fe-a9e1-2e8c36776ad8&type=channel&deeplinkId=673449c9-e109-4138-95fb-020f2ad590d8&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true">feedback Teams channel</a> and we will investigate.</p>
 
-            <h1 class="govuk-heading-m">24 January 2023</h1>
+            <h2 class="govuk-heading-m">24 January 2023</h2>
 
             <h2 class="govuk-heading-s">Checking for missing PSR statuses</h2>
 
@@ -63,7 +85,7 @@
                 <li>You will see a table of all defendants and their reporting needs for the filtered view you selected.</li>
             </ol>
 
-            <p class="govuk-body pac-secondary-text">Last updated: 7 February 2023</p>
+            <p class="govuk-body pac-secondary-text">Last updated: 27 July 2023</p>
         </div>
     </div>
 {% endblock %}
