--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -140,7 +140,7 @@
         <li>the offence and a brief summary</li>
         <li>the defendant's personal details - name, gender, date of birth, address and nationality</li>
         <li>the timeline of the case’s hearings and when the next hearing is scheduled for</li>
-        <li>Comments about a defendant</li>
+        <li>comments about a defendant</li>
       </ul>
 
       <p class="govuk-body">If a defendant has no probation record, you will only see the case summary information.</p>
