PIC-3212 update search box label

--- a/server/views/components/search/template.njk
+++ b/server/views/components/search/template.njk
@@ -25,7 +25,7 @@
         {% endif %}
         <form name="pac-search-form" id="pac-search-form" method="get" action="/case-search">
             <div class="search-group">
-                <label class="govuk-label govuk-!-margin-bottom-3" for="search-term">Enter CRN or defendant name.</label>
+                <label class="govuk-label govuk-!-margin-bottom-3" for="search-term">Enter the CRN or full name of the person you are searching for.</label>
                 <input class="govuk-input govuk-!-width-one-third" id="search-term" name="term" type="text" maxlength="650" value="{{ params.term }}">
                 <button class="govuk-button govuk-!-margin-bottom-1 govuk-!-margin-left-3" data-module="govuk-button" type="submit">Search</button>
             </div>
