--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -115,7 +115,7 @@
       <p class="govuk-body">You should only use upper case letters in CRN searches. The search will not return any results if you search with a lowercase letter. For example A123456 will work but a123456 will not.</p>
       
       <h3 class="govuk-heading-s" id="ug-applying-filters-to-a-case-list">Applying filters to a case list</h3>
-      <p class="govuk-body">You can filter a case list by probation status, courtroom and session. You can apply
+      <p class="govuk-body">You can filter a case list by probation status, courtroom, session, source and flag. You can apply
         multiple filters to a case list.</p>
       <p class="govuk-body">When filters are applied, the case list will only display cases that match the selected
         filters.</p>
