💬 PR/Team comments

--- a/server/views/whats-new.njk
+++ b/server/views/whats-new.njk
@@ -35,7 +35,7 @@
 
             <h3 class="govuk-heading-s">Speed improvements</h3>
 
-            <p class="govuk-body">We have made some changes in the background of the service so that pages will load more quickly. If you have seen an error that says 'There is a problem with the service, try again later' recently, one of the reasons why is because the pages are loading too slowly. </p>
+            <p class="govuk-body">We have made some changes in the background of the service so that the case list will load more quickly. If you have seen an error that says 'There is a problem with the service, try again later' recently, one of the reasons why is because the pages are loading too slowly. </p>
 
             <p class="govuk-body">We hope that this change will reduce the number of errors you are seeing.</p>
 
