--- a/server/views/outcomes/casesInProgress.njk
+++ b/server/views/outcomes/casesInProgress.njk
@@ -55,6 +55,7 @@
   {% set defendantFullName = (item.name.forename1 + ' ' + item.name.surname) if (item.name.forename1 and item.name.surname) else item.defendantName %}
   {% set a11yTitle = 'View case for defendant ' + defendantFullName | escape | apostropheInName | properCase | removeTitle %}
   {% set crnDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">' + item.crn if item.crn else '' + '</div>' %}
+  {% set assignedToCurrentUser = currentUserUuid === item.assignedToUuid %}
   {%- set tableRow = [
     { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
     { text: item.hearingOutcomeDescription | safe },
@@ -62,8 +63,10 @@
     { text: offences | join('') | safe },
     { text: moment(item.hearingDate, 'YYYY-MM-DD').format("D MMM YYYY"), format: 'numeric' },
     { text:  govukButton({
-      text: "Move to resulted",
-      classes: "govuk-button--secondary"
+      text: 'Move to resulted',
+      classes: ('' if assignedToCurrentUser else "govuk-button--secondary"),
+      href: (item.hearingId + '/move-to-resulted?defendantName=' + item.defendantName) if assignedToCurrentUser else '',
+      disabled: not assignedToCurrentUser
     }) }
   ] -%}
   {{ tableData.rows.push(tableRow) }}
@@ -96,6 +99,19 @@
 {% extends "../partials/layout.njk" %}
 
 {% block content %}
+
+  {% if moveToResultedSuccess | length %}
+    {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+    {% set html %}
+      <p class="govuk-notification-banner__heading">
+        You have moved {{ moveToResultedSuccess }}'s case to resulted cases.
+      </p>
+    {% endset %}
+    {{ govukNotificationBanner({
+      html: html,
+      type: 'success'
+    }) }}
+  {% endif %}
   <h1 class="govuk-heading-xl govuk-!-margin-bottom-6" aria-label="{{ title }}">{{ title }}</h1>
 
   {%- from "components/tabs/macro.njk" import pacTabs -%}
