--- a/server/views/outcomes/resultedCases.njk
+++ b/server/views/outcomes/resultedCases.njk
@@ -1,3 +1,74 @@
+{%- set moment = params.moment -%}
+{%- set displayFilters = params.casesToResultCount or params.filtersApplied -%}
+
+{% block javascripts %}
+  {% if displayFilters %}
+    <script type="text/javascript" src="/javascripts/hearing-outcomes-date-sort-component-{{ appVersion }}.min.js"></script>
+    <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"></script>
+  {% endif %}
+{% endblock %}
+
+{% set tableData = {
+  attributes: {
+    'data-module': 'moj-sortable-table'
+  },
+  head:
+  [
+    { text: "Defendant" },
+    { text: "Outcome type" },
+    { text: "Probation status" },
+    { text: "Offence", "classes": "govuk-!-width-one-third" },
+    { text: ('
+      <button id="button-hearing-outcome-sort" type="button" data-sort="' + params.hearingDateSort + '"
+          aria-controls="button-hearing-outcome-sort" class="pac-sort-button">Hearing date
+      </button>
+    ') | safe,
+      format: 'numeric',
+      attributes: {
+      "aria-sort": params.hearingDateSort
+    }
+    },
+    { text: "Resulted by" }
+  ],
+  rows: []
+} %}
+
+{% for item in data %}
+
+  {% set offences = [] %}
+
+  {% set notMatched = item.probationStatus | string | lower == "possible ndelius record" %}
+  {% if item.offences | length === 1 %}
+    {% for offence in item.offences %}
+      {{ offences.push(offence | escape) }}
+    {% endfor %}
+    {% elif item.offences | length %}
+    {{ offences.push('<ol class="govuk-list govuk-list--number govuk-!-margin-bottom-0">') }}
+    {% for offence in item.offences %}
+      {{ offences.push('<li>' + offence | escape + '</li>') }}
+    {% endfor %}
+    {{ offences.push('</ol>') }}
+  {% endif %}
+
+
+  {% set defendantFullName = (item.name.forename1 + ' ' + item.name.surname) if (item.name.forename1 and item.name.surname) else item.defendantName %}
+  {% set a11yTitle = 'View case for defendant ' + defendantFullName | escape | apostropheInName | properCase | removeTitle %}
+  {% set crnDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">' + item.crn if item.crn else '' + '</div>' %}
+  {% set assignedToCurrentUser = currentUserUuid === item.assignedToUuid %}
+  {%- set tableRow = [
+    { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
+    { text: item.hearingOutcomeDescription | safe },
+    { html: '<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + '</div>' +
+            (item.probationStatus | string | capitalize if not notMatched) },
+    { text: offences | join('') | safe },
+    { text: moment(item.hearingDate, 'YYYY-MM-DD').format("D MMM YYYY"), format: 'numeric' },
+    { html: item.assignedTo + '<br>on ' + (item.resultedDate | hearingOutcomeResultedDateFormat) }
+  ] -%}
+  {{ tableData.rows.push(tableRow) }}
+
+{% endfor %}
+
+
 {%- set listTabs = [
   {
     title: 'Cases to result',
@@ -32,6 +103,21 @@
     controls: "outcomes"
   }) }}
 
-  <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "No case list information available." }}</p>
+  {% if displayFilters %}
+    {%- from "components/filter/macro.njk" import pacFilter -%}
+    {{ pacFilter({
+      filters: params.filters,
+      hiddenInputs: params.sorts
+    }) }}
+  {% endif %}
+
+  {% if tableData.rows | length %}
+    {% block table %}
+      {%- from "govuk/components/table/macro.njk" import govukTable -%}
+      {{ govukTable(tableData) }}
+    {% endblock %}
+  {% else %}
+    <p class="govuk-body">{{ "There are no cases that match these criteria" }}</p>
+  {% endif %}
 
 {% endblock %}
