PIC-2883: addressed https://github.com/ministryofjustice/prepare-a-case/pull/796#discussion_r1319638912

--- a/server/views/outcomes/casesInProgress.njk
+++ b/server/views/outcomes/casesInProgress.njk
@@ -71,6 +71,7 @@
 {% endfor %}
 
 
+
 {%- set listTabs = [
   {
     title: 'Cases to result',
@@ -122,7 +123,7 @@
     {% if params.filtersApplied %}
       <span class="govuk-heading-m">0 cases</span>
     {% endif %}
-    <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "No case list information available." }}</p>
+    <p class="govuk-body">{{ "There are no cases that match these criteria." if params.filtersApplied else "No cases in progress available." }}</p>
   {% endif %}
 
 {% endblock %}
