--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -11,7 +11,8 @@
 
 {% set tableData = {
   attributes: {
-    'data-module': 'moj-sortable-table'
+    'data-module': 'moj-sortable-table',
+    'id': 'hearing-outcome'
   },
   head:
   [
