--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -6,11 +6,13 @@
     <script type="text/javascript" src="/javascripts/hearing-outcomes-date-sort-component-{{ appVersion }}.min.js"></script>
     <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"></script>
   {% endif %}
+  <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>
 {% endblock %}
 
 {% set tableData = {
   attributes: {
-    'data-module': 'moj-sortable-table'
+    'data-module': 'moj-sortable-table',
+    'id': 'hearing-outcome'
   },
   head:
   [
@@ -54,8 +56,9 @@
   {% set defendantFullName = (item.name.forename1 + ' ' + item.name.surname) if (item.name.forename1 and item.name.surname) else item.defendantName %}
   {% set a11yTitle = 'View case for defendant ' + defendantFullName | escape | apostropheInName | properCase | removeTitle %}
   {% set crnDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">' + item.crn if item.crn else '' + '</div>' %}
+  {% set summaryLink = '/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary' %}
   {%- set tableRow = [
-    { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
+    { text: ('<a href="' + summaryLink + '" class="pac-defendant-link pac-assign govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '" data-hearingid="' + item.hearingId + '" data-defendantid="' + item.defendantId + '" data-courtcode="' + params.courtCode + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
     { text: item.hearingOutcomeDescription | safe },
     { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched)) | safe },
     { text: offences | join('') | safe },
@@ -107,6 +110,8 @@
       hiddenInputs: params.sorts
     }) }}
   {% endif %}
+
+  {% include "court-case-progress-assign-modal.njk" %}
 
   {% if tableData.rows | length %}
     {% block table %}
