--- a/server/views/court-case-progress-assign-modal.njk
+++ b/server/views/court-case-progress-assign-modal.njk
@@ -1,7 +1,7 @@
 <div id="assign-outcome-modal" class="modal-container" role="dialog" tabindex="-1">
-    <div class="modal-content govuk-!-padding-2" role="document">
+    <div class="modal-content govuk-!-padding-3" role="document">
         <button class="modal-close govuk-!-font-size-16" aria-label="Close">X</button>
-        <div class="modal-body govuk-grid-rhow">
+        <div class="modal-body govuk-grid-row">
             <div class="govuk-grid-column-full govuk-!-margin-bottom-5">
                 <h2 class="govuk-heading-m">Do you want to result this case now?</h2>
                 <p class="govuk-body">You can view this case but it has not been assigned to you to result.</p>
