PIC-3167: added edit button

--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -20,6 +20,9 @@
                                 <div class="govuk-grid-column-full govuk-notification-banner--success govuk-notification-banner__header govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-bottom-2">
                                     <span class="govuk-notification-banner__title govuk-!-font-size-16">{{ hearing.hearingOutcome.hearingOutcomeDescription }}</span>
                                     <span class="govuk-notification-banner__title govuk-!-font-size-16 hearing-outcome-display-date govuk-!-padding-left-2">Sent to admin on {{ hearing.hearingOutcome.outcomeDate | hearingNoteTimeFormat }}</span>
+                                    {% if hearing.hearingOutcome.state !== 'RESULTED' %}
+                                        <a href="#" class="govuk-notification-banner__title govuk-!-font-size-16 hearing-outcome-edit govuk-!-padding-left-2" data-hearingOutcome="{{ hearing.hearingOutcome | stringify | safe }}">Edit</a>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
