PIC-3294 display dynamic counts on outcome tabs

--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -86,8 +86,7 @@
   {
     title: 'Resulted cases',
     a11yTitle: 'View resulted cases',
-    link: '/' + params.courtCode + '/outcomes/resulted-cases',
-    count: params.resultedCasesCount
+    link: '/' + params.courtCode + '/outcomes/resulted-cases'
   }
 ] -%}
 
