--- a/server/views/outcomes/casesInProgress.njk
+++ b/server/views/outcomes/casesInProgress.njk
@@ -94,8 +94,7 @@
   {
     title: 'Resulted cases',
     a11yTitle: 'View resulted cases',
-    link: '/' + params.courtCode + '/outcomes/resulted-cases',
-    count: params.resultedCasesCount
+    link: '/' + params.courtCode + '/outcomes/resulted-cases'
   }
 ] -%}
 
